--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -1,13 +1,16 @@
 html {
-  min-height: 100vh;
-  min-width: 100%;
 
   p {
     margin: 0;
   }
 
-  th {
-    position: sticky;
-    top: 0;
+  h5 {
+    margin: 0;
   }
+
+  h6 {
+    margin: 0;
+  }
+
 }
+
